feat(tmux): turn off autolaunch on MacOs startup

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -82,6 +82,6 @@ set -g @catppuccin_date_time_text "%H:%M"
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @continuum-boot-options 'alacritty'
-set -g @continuum-boot 'on'
+set -g @continuum-boot 'off'
 
 run ~/.tmux/plugins/tpm/tpm
