feat(tmux): replace window switch keymappings

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -31,10 +31,22 @@ bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
 # Window navigation
-bind -n C-S-Right next-window
-bind -n C-S-Left previous-window
+unbind -n C-t
+unbind -n C-w
+unbind -n M-Right
+unbind -n M-Left
+unbind -n ¬
+unbind -n ˙
+unbind -n M-h
+unbind -n M-l
 bind -n C-t new-window
 bind -n C-w kill-window
+bind -n M-Right next-window
+bind -n M-Left previous-window
+bind -n ¬ next-window
+bind -n ˙ previous-window
+bind -n M-h previous-window
+bind -n M-l next-window
 
 # Session navigation
 unbind n
