fix: fix catppuccin syntax

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -71,7 +71,7 @@ set -g @plugin 'T1erno/tmux-auto-renumber-session'
 
 # Colorcheme
 set -g @plugin 'Ninzalo/catppuccin_gruvbox'
-set -g @catppuccin_flavour "gruvbox"
+set -g @catppuccin_flavor "gruvbox"
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
