feat(tmux): replace key mappings

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -20,37 +20,43 @@ setw -g mode-keys vi
 # Window split
 unbind %
 unbind '"'
-bind '\' split-window -h -c "#{pane_current_path}"
+unbind -
+
+bind % split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Window resize
+unbind j
+unbind k
+unbind l
+unbind h
+unbind m
+
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
-# Window navigation
-unbind -n C-t
-unbind -n C-w
-unbind -n M-Right
-unbind -n M-Left
-unbind -n ¬
-unbind -n ˙
-unbind -n M-h
-unbind -n M-l
-bind -n C-t new-window
-bind -n C-w kill-window
-bind -n M-Right next-window
-bind -n M-Left previous-window
-bind -n ¬ next-window
-bind -n ˙ previous-window
-bind -n M-h previous-window
-bind -n M-l next-window
-
-# Session navigation
+# Window control
+unbind &
+unbind c
+unbind p
 unbind n
-bind -r n new-session
+
+bind & kill-window
+bind c new-window
+bind p previous-window
+bind n next-window
+
+# Session control
+unbind s
+unbind d
+unbind a
+
+bind s choose-session
+bind d detach-client
+bind a new-session
 
 # Copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -58,8 +64,8 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Reload config
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+unbind S-r
+bind S-r source-file ~/.config/tmux/tmux.conf
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
