--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -25,8 +25,28 @@ hide_when_typing = true
 
 [keyboard]
 bindings = [
+  # General
   {key = "T", mods = "Command", action = "None"},
   {key = "N", mods = "Command", action = "None"},
   {key = "W", mods = "Command", action = "Quit"},
   {key = "F", mods = "Option", action = "ToggleFullscreen"},
+  # Tmux general
+  {key = "R", mods = "Command|Control|Shift|Alt", chars = "\u0001R"}, # Reload Tmux config
+  {key = "U", mods = "Command|Control|Shift|Alt", chars = "\u0001U"}, # Update Tmux plugins
+  {key = "X", mods = "Command|Control|Shift|Alt", chars = "\u0001x"}, # Kill session/window/pane
+  {key = "M", mods = "Command|Control|Shift|Alt", chars = "\u0001m"}, # Maximize pane
+  ## Sessions
+  {key = "S", mods = "Command|Control|Shift|Alt", chars = "\u0001s"}, # Choose session
+  {key = "D", mods = "Command|Control|Shift|Alt", chars = "\u0001d"}, # Detach session
+  {key = "N", mods = "Command|Control|Shift|Alt", chars = "\u0001a"}, # New session
+  {key = "4", mods = "Command|Control|Shift|Alt", chars = "\u0001$"}, # Rename session
+  ## Windows
+  {key = "W", mods = "Command|Control|Shift|Alt", chars = "\u0001&"}, # Close window
+  {key = "T", mods = "Command|Control|Shift|Alt", chars = "\u0001c"}, # New window
+  {key = "L", mods = "Command|Control|Shift|Alt", chars = "\u0001n"}, # Next window
+  {key = "H", mods = "Command|Control|Shift|Alt", chars = "\u0001p"}, # Previous window
+  {key = ",", mods = "Command|Control|Shift|Alt", chars = "\u0001,"}, # Rename window
+  ## Panes
+  {key = "\\" , mods = "Command|Control|Shift|Alt", chars = "\u0001%"}, # Vertical split
+  {key = '-' , mods = "Command|Control|Shift|Alt", chars = "\u0001-"}, # Horizontal split
 ]
