feat(tmux): replace catppuccin with own style config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,7 +13,6 @@ set -g escape-time 0
 set -g history-limit 1000000
 set -g renumber-windows on
 set -g set-clipboard on
-set -g status-position top
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 
@@ -75,26 +74,59 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'T1erno/tmux-auto-renumber-session'
 
-# Colorcheme
-set -g @plugin 'Ninzalo/catppuccin_gruvbox'
-set -g @catppuccin_flavor "gruvbox"
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "gitmux directory date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-set -g @catppuccin_date_time_text "%H:%M"
+# Status line
+set -g status on
+set -g status-position top
+set -g status-bg "#282828"
+set -g status-fg "#ebdbb2"
+set -g status-interval 5
+set -g status-justify left
+set -g status-left-length 100
+set -g status-right-length 100
+set -g message-line 0
+set -g message-style "fg=#ebdbb2,bg=#3d3836,align=centre"
+set -g message-command-style "fg=#ebdbb2,bg=#3d3836,align=centre"
+
+## Session
+set -g status-left "\
+#[fg=#{?client_prefix,#fb4934,#b8bb26},bg=#282828]█\
+#[fg=#ebdbb2,bg=#3d3836] #S\
+#[fg=#3d3836,bg=#282828]█"
+
+## Window current
+set -g window-status-current-format "\
+#[fg=#d65d0e,bg=#282828]\
+#[fg=#3d3836,bg=#d65d0e]#I \
+#[fg=#ebdbb2,bg=#64605e] #W#{?window_zoomed_flag,(),}\
+#[fg=#64605e,bg=#282828]█"
+
+## Window default
+set -g window-status-format "\
+#[fg=#458588,bg=#282828]\
+#[fg=#3d3836,bg=#458588]#I \
+#[fg=#ebdbb2,bg=#3d3836] #W\
+#[fg=#3d3836,bg=#282828]█"
+
+## Git status
+set -g status-right "\
+#[fg=#b8bb26,bg=#282828]\
+#[fg=#3d3836,bg=#b8bb26]󰊢 \
+#[fg=#b8bb26,bg=#3d3836] #(gitmux \"#{pane_current_path}\")\
+#[fg=#3d3836,bg=#282828]█"
+
+## Directory
+set -ag status-right "\
+#[fg=#d3869b,bg=#282828]\
+#[fg=#3d3836,bg=#d3869b] \
+#[fg=#ebdbb2,bg=#3d3836] #{b:pane_current_path}\
+#[fg=#3d3836,bg=#282828]█"
+
+## Date time
+set -ag status-right "\
+#[fg=#458588,bg=#282828]\
+#[fg=#3d3836,bg=#458588]󰃰 \
+#[fg=#ebdbb2,bg=#3d3836] %H:%M\
+#[fg=#3d3836,bg=#282828]█"
 
 # Tmux-continuum
 set -g @plugin 'tmux-plugins/tmux-continuum'
