feat(tmux): add widgets to the status-line

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -75,25 +75,56 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'T1erno/tmux-auto-renumber-session'
 
 # Status line
+source -F "#{d:current_file}/themes/gruvbox.conf"
+
 set -g status on
 set -g status-position top
 set -g status-interval 5
 set -g status-justify left
 set -g status-left-length 100
 set -g status-right-length 100
+set -gF status-bg "#{@thm_bg}"
+set -gF status-fg "#{@thm_widget_fg}"
+
 set -g message-line 0
+set -g message-style "fg=#{@thm_widget_fg},bg=#{@thm_widget_bg},align=centre"
+set -g message-command-style "fg=#{@thm_widget_fg},bg=#{@thm_widget_bg},align=centre"
+set -g status-left ""
+set -g status-right ""
+
+set -g @default_left_corner ""
+set -g @default_separator "█"
+set -g @default_right_corner ""
 
 ## Session
+%hidden MODULE_NAME="session"
+source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
+set -agF status-left "#{@${MODULE_NAME}_widget}"
 
 ## Window current
+%hidden MODULE_NAME="current_window"
+source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
+set -gF window-status-current-format "#{@${MODULE_NAME}_widget}"
 
 ## Window default
+%hidden MODULE_NAME="default_window"
+source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
+set -gF window-status-format "#{@${MODULE_NAME}_widget}"
 
 ## Git status
+%hidden MODULE_NAME="gitmux"
+source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
+set -agF status-right "#{@${MODULE_NAME}_widget}"
 
 ## Directory
+%hidden MODULE_NAME="directory"
+source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
+set -agF status-right "#{@${MODULE_NAME}_widget}"
 
 ## Date time
+%hidden MODULE_NAME="date_time"
+source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
+set -agF status-right "#{@${MODULE_NAME}_widget}"
 
 # Tmux-continuum
 set -g @plugin 'tmux-plugins/tmux-continuum'
