feat(tmux): add default window status format

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -90,6 +90,8 @@ set -g message-line 0
 set -g message-style "fg=#{@thm_widget_fg},bg=#{@thm_widget_bg},align=centre"
 set -g message-command-style "fg=#{@thm_widget_fg},bg=#{@thm_widget_bg},align=centre"
 set -g status-left ""
+set -g window-status-current-format ""
+set -g window-status-format ""
 set -g status-right ""
 
 set -g @default_left_corner ""
@@ -104,12 +106,12 @@ set -agF status-left "#{@${MODULE_NAME}_widget}"
 ## Window current
 %hidden MODULE_NAME="current_window"
 source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
-set -gF window-status-current-format "#{@${MODULE_NAME}_widget}"
+set -agF window-status-current-format "#{@${MODULE_NAME}_widget}"
 
 ## Window default
 %hidden MODULE_NAME="default_window"
 source -F "#{d:current_file}/status/${MODULE_NAME}.conf"
-set -gF window-status-format "#{@${MODULE_NAME}_widget}"
+set -agF window-status-format "#{@${MODULE_NAME}_widget}"
 
 ## Git status
 %hidden MODULE_NAME="gitmux"
