--- a/tmux/.config/tmux/utils/widget_template.conf
+++ b/tmux/.config/tmux/utils/widget_template.conf
@@ -1,4 +1,4 @@
-set -gF @${MODULE_NAME}_widget "\
+set -gqF @${MODULE_NAME}_widget "\
 #[fg=#{@${MODULE_NAME}_left_corner_color},bg=#{@thm_bg}]#{@${MODULE_NAME}_left_corner}\
 #[fg=#{@${MODULE_NAME}_text_bg},bg=#{@${MODULE_NAME}_left_corner_color}]#{@${MODULE_NAME}_icon}\
 #[fg=#{@${MODULE_NAME}_left_separator_color},bg=#{@${MODULE_NAME}_text_bg}]#{@${MODULE_NAME}_left_separator}\
