--- a/tmux/.config/tmux/status/current_window.conf
+++ b/tmux/.config/tmux/status/current_window.conf
@@ -1,17 +1,17 @@
 %hidden MODULE_NAME="current_window"
 
-set -g @${MODULE_NAME}_left_corner "#{@default_left_corner}"
-set -g @${MODULE_NAME}_left_corner_color "#{@thm_orange}"
-set -g @${MODULE_NAME}_icon "#I "
-set -g @${MODULE_NAME}_icon_color "#{@${MODULE_NAME}_left_corner_color}"
-set -g @${MODULE_NAME}_left_separator "#{@default_separator}"
-set -g @${MODULE_NAME}_left_separator_color "#{@thm_current_window_bg}"
-set -g @${MODULE_NAME}_right_separator "#{@default_separator}"
-set -g @${MODULE_NAME}_right_separator_color "#{@thm_current_window_bg}"
-set -g @${MODULE_NAME}_text "#W#{?window_zoomed_flag,(),}"
-set -g @${MODULE_NAME}_text_fg "#{@thm_widget_fg}"
-set -g @${MODULE_NAME}_text_bg "#{@thm_current_window_bg}"
-set -g @${MODULE_NAME}_right_corner "#{@default_right_corner}"
-set -g @${MODULE_NAME}_right_corner_color "#{@thm_current_window_bg}"
+set -ogq @${MODULE_NAME}_left_corner "#{E:@default_left_corner}"
+set -ogq @${MODULE_NAME}_left_corner_color "#{E:@thm_orange}"
+set -ogq @${MODULE_NAME}_icon "#I "
+set -ogq @${MODULE_NAME}_icon_color "#{E:@${MODULE_NAME}_left_corner_color}"
+set -ogq @${MODULE_NAME}_left_separator "#{E:@default_separator}"
+set -ogq @${MODULE_NAME}_left_separator_color "#{E:@thm_current_window_bg}"
+set -ogq @${MODULE_NAME}_right_separator "#{E:@default_separator}"
+set -ogq @${MODULE_NAME}_right_separator_color "#{E:@thm_current_window_bg}"
+set -ogq @${MODULE_NAME}_text "#W#{?window_zoomed_flag,(),}"
+set -ogq @${MODULE_NAME}_text_fg "#{E:@thm_widget_fg}"
+set -ogq @${MODULE_NAME}_text_bg "#{E:@thm_current_window_bg}"
+set -ogq @${MODULE_NAME}_right_corner "#{E:@default_right_corner}"
+set -ogq @${MODULE_NAME}_right_corner_color "#{E:@thm_current_window_bg}"
 
 source -F "#{d:current_file}/../utils/widget_template.conf"
