--- a/tmux/.config/tmux/status/directory.conf
+++ b/tmux/.config/tmux/status/directory.conf
@@ -1,17 +1,17 @@
 %hidden MODULE_NAME="directory"
 
-set -g @${MODULE_NAME}_left_corner "#{@default_left_corner}"
-set -g @${MODULE_NAME}_left_corner_color "#{@thm_pink}"
-set -g @${MODULE_NAME}_icon " "
-set -g @${MODULE_NAME}_icon_color "#{@${MODULE_NAME}_left_corner_color}"
-set -g @${MODULE_NAME}_left_separator "#{@default_separator}"
-set -g @${MODULE_NAME}_left_separator_color "#{@thm_widget_bg}"
-set -g @${MODULE_NAME}_right_separator "#{@default_separator}"
-set -g @${MODULE_NAME}_right_separator_color "#{@thm_widget_bg}"
-set -g @${MODULE_NAME}_text "#{b:pane_current_path}"
-set -g @${MODULE_NAME}_text_fg "#{@thm_widget_fg}"
-set -g @${MODULE_NAME}_text_bg "#{@thm_widget_bg}"
-set -g @${MODULE_NAME}_right_corner "#{@default_right_corner}"
-set -g @${MODULE_NAME}_right_corner_color "#{@thm_widget_bg}"
+set -ogq @${MODULE_NAME}_left_corner "#{E:@default_left_corner}"
+set -ogq @${MODULE_NAME}_left_corner_color "#{E:@thm_pink}"
+set -ogq @${MODULE_NAME}_icon " "
+set -ogq @${MODULE_NAME}_icon_color "#{E:@${MODULE_NAME}_left_corner_color}"
+set -ogq @${MODULE_NAME}_left_separator "#{E:@default_separator}"
+set -ogq @${MODULE_NAME}_left_separator_color "#{E:@thm_widget_bg}"
+set -ogq @${MODULE_NAME}_right_separator "#{E:@default_separator}"
+set -ogq @${MODULE_NAME}_right_separator_color "#{E:@thm_widget_bg}"
+set -ogq @${MODULE_NAME}_text "#{b:pane_current_path}"
+set -ogq @${MODULE_NAME}_text_fg "#{E:@thm_widget_fg}"
+set -ogq @${MODULE_NAME}_text_bg "#{E:@thm_widget_bg}"
+set -ogq @${MODULE_NAME}_right_corner "#{E:@default_right_corner}"
+set -ogq @${MODULE_NAME}_right_corner_color "#{E:@thm_widget_bg}"
 
 source -F "#{d:current_file}/../utils/widget_template.conf"
