--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -81,14 +81,23 @@ set -g @continuum-boot-options 'alacritty'
 set -g @continuum-boot 'off'
 
 # Status line
+set -g @plugin 'Ninzalo/tmux-style'
 
 set -g status on
 set -g status-position top
 set -g status-left ""
 set -g status-right ""
 
+set -g @tms-colorscheme "gruvbox"
+set -g @tms-gitmux-text "#(gitmux -cfg $HOME/.config/gitmux/.gitmux.conf #{pane_current_path})"
 
+set -ag status-left "#{E:@tms-session-widget}"
 
+set -ag status-right "#{E:@tms-gitmux-widget}"
+set -ag status-right "#{E:@tms-directory-widget}"
+set -ag status-right "#{E:@tms-date-time-widget}"
 
+set -g window-status-current-format "#{E:@tms-current-window-widget}"
+set -g window-status-format "#{E:@tms-default-window-widget}"
 
 run ~/.tmux/plugins/tpm/tpm
