feat(gitmux): update colors

--- a/gitmux/.gitmux.conf
+++ b/gitmux/.gitmux.conf
@@ -34,29 +34,29 @@ tmux:
         # Clear previous style.
         clear: "#[none]"
         # Special tree state strings such as [rebase], [merge], etc.
-        state: "#[fg=#{@thm_red}]"
+        state: "#[fg=#{#fb4934}]"
         # Local branch name
-        branch: "#[fg=#{@thm_widget_fg}]"
+        branch: "#[fg=#{#ebdbb2}]"
         # Remote branch name
-        remote: "#[fg=#{@thm_cyan}]"
+        remote: "#[fg=#{#83a598}]"
         # 'divergence' counts
-        divergence: "#[fg=#{@thm_yellow}]"
+        divergence: "#[fg=#{#d79921}]"
         # 'staged' count
-        staged: "#[fg=#{@thm_green}]"
+        staged: "#[fg=#{#b8bb26}]"
         # 'conflicts' count
-        conflict: "#[fg=#{@thm_red}]"
+        conflict: "#[fg=#{#fb4934}]"
         # 'modified' count
-        modified: "#[fg=#{@thm_orange}]"
+        modified: "#[fg=#{#d65d0e}]"
         # 'untracked' count
-        untracked: "#[fg=#{@thm_pink}]"
+        untracked: "#[fg=#{#d3869b}]"
         # 'stash' count
-        stashed: "#[fg=#{@thm_cyan}]"
+        stashed: "#[fg=#{#83a598}]"
         # 'insertions' count
-        insertions: "#[fg=#{@thm_green}]"
+        insertions: "#[fg=#{#b8bb26}]"
         # 'deletions' count
-        deletions: "#[fg=#{@thm_red}]"
+        deletions: "#[fg=#{#fb4934}]"
         # 'clean' symbol
-        clean: "#[fg=#{@thm_green}]"
+        clean: "#[fg=#{#b8bb26}]"
 
     # The layout section defines what components gitmux shows and the order in
     # which they appear on tmux status bar.
