fix(submodules/ghostty): fix submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = git@github.com:Ninzalo/dotfiles-zsh.git
 [submodule "ghostty"]
 	path = ghostty
-	url = git@github.com:Ninzalo/ghostty.git
+	url = git@github.com:Ninzalo/dotfiles-ghostty.git
